[package]
name = "vault-zeta"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_zeta"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2" }
arrayref = "0.3.6"
num-traits = "0.2.15"
uint="0.9.4"
cpi_interface = { path = "../cpi-interface" }
bytemuck = "1.4.0"
rust_decimal = { git = "https://github.com/zetamarkets/rust-decimal.git", features = ["maths"] }
serum_dex = { version = "0.5.4", features = ["no-entrypoint"] }